2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (evenp, oddp): New functions.

	* eval.c (eval_init): New functions registered as intrinsics.

	* lib.h (evenp, oddp): Declared.

	* txr.1: Documentation stub updated.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (highest_bit): Linkage changed to static.
	(abso, isqrt): New functions.
	(isqrt_fixnum): New static function.

	* eval.c (eval_init): Registered abs, sqrt and numberp instrinsics.

	* lib.c (numberp): New function.

	* lib.h (numberp, abso, isqrt): Declared.

	* mpi-patches/series: New patch added.

	* mpi-patches/faster-square-root: New patch added.

	* txr.1: Documentation stubs for new functions.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (expt): Fix broken bignum x fixnum combination.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (repatch): New phony target.
	(distclean): Remove mpi directory.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	Patch to shrink mpi-int to three words on 32 bit platforms,
	so that obj_t stays four pointers wide.

	* mpi-patches/series: New patch added.

	* mpi-patches/shrink-mpi-int: New file.

2011-12-12  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/bit-search-optimizations (s_highest_bit): Added static
	storage class specifier.

	* mpi-patches/fix-mult-bug (s_mp_sqr): More braindamage found in MPI.
	This function performs additions and multiplication mp_digit,
	expecting a mp_word precision result without casting. This function
	is needed for exponentiation.

2011-12-12  Kaz Kylheku  <kaz@kylheku.com>

	Git rid of some some loops in MPI where it is searching for
	the highest bit, replacing them with an adapation of the
	bit searching function used in arith.c.

	* mpi-patches/series: Patch added.

	* mpi-patches/bit-search-optimizations: New file.

2011-12-12  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (expt): New function.

	* eval.c (eval_init): Registering new intrinsic functions,
	reduce-left, reduce-right and expt.
