@@ -4811,6 +4811,10 @@ The following are Lisp functions and variables built-in to TXR.
 
 .SS Arithmetic functions +, -, *, trunc, mod, expt, sqrt
 
+.SS Arithmetic function exptmod
+
+.SS Arithmetic function gcd
+
 .SS Arithmetic function abs
 
 .SS Functions fixnump, bignump, numberp
