@@ -1,5 +1,15 @@
 2011-12-13  Kaz Kylheku  <kaz@kylheku.com>
 
+	* arith.c (exptmod, gcd): New functions.
+
+	* eval.c (eval_init): New functions registered as intrisics.
+
+	* lib.h (exptmod, gcd): Declared.
+
+	* txr.1: Documentation stubs added.
+
+2011-12-13  Kaz Kylheku  <kaz@kylheku.com>
+
 	* arith.c (evenp, oddp): New functions.
 
 	* eval.c (eval_init): New functions registered as intrinsics.
